[tool.poetry]
name = "llm-tdd"
version = "0.1.0"
description = ""
authors = ["victorlandeau <vlandeau@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_tdd"}]

[tool.poetry.dependencies]
python = "~3.10"
jupyter = "^1.0.0"
pyautogen = "^0.2.17"
pytest = "^8.1.1"
click = "^8.1.7"
print-color = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
